// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createNestJsRules with nest 1`] = `
{
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-module-boundary-types": "off",
  "@typescript-eslint/interface-name-prefix": "off",
  "@typescript-eslint/no-explicit-any": "off",
  "@typescript-eslint/no-extraneous-class": "off",
}
`;

exports[`createNestJsRules without nest 1`] = `null`;

exports[`createRemixTypeScriptOverride with remix and typescript 1`] = `
{
  "files": [
    "**/routes/**/*.js?(x)",
    "**/routes/**/*.tsx",
  ],
  "rules": {
    "@typescript-eslint/no-throw-literal": "off",
  },
}
`;

exports[`createTypeScriptRules with create-react-app 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": true,
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implicit-any-catch": "off",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "off",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with react 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implicit-any-catch": "off",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "off",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3.4 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3.7 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3.7 and strict null checks 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-nullish-coalescing": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3.8 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 3.9 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules with version 4 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implicit-any-catch": "off",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules without strict 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implicit-any-catch": "off",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules without strictNullChecks 1`] = `
{
  "@typescript-elint/object-curly-spacing": "off",
  "@typescript-eslint/adjacent-overload-signatures": "error",
  "@typescript-eslint/array-type": [
    "warn",
    {
      "default": "array",
    },
  ],
  "@typescript-eslint/await-thenable": "error",
  "@typescript-eslint/ban-ts-comment": [
    "error",
    {
      "ts-expect-error": "allow-with-description",
      "ts-ignore": true,
      "ts-nocheck": true,
    },
  ],
  "@typescript-eslint/ban-tslint-comment": "error",
  "@typescript-eslint/ban-types": "warn",
  "@typescript-eslint/brace-style": "off",
  "@typescript-eslint/camelcase": "off",
  "@typescript-eslint/class-literal-property-style": "off",
  "@typescript-eslint/comma-dangle": "off",
  "@typescript-eslint/comma-spacing": "off",
  "@typescript-eslint/consistent-indexed-object-style": "off",
  "@typescript-eslint/consistent-type-assertions": [
    "error",
    {
      "assertionStyle": "as",
      "objectLiteralTypeAssertions": "never",
    },
  ],
  "@typescript-eslint/consistent-type-definitions": [
    "error",
    "type",
  ],
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "disallowTypeAnnotations": true,
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/default-param-last": "error",
  "@typescript-eslint/dot-notation": "error",
  "@typescript-eslint/explicit-function-return-type": "off",
  "@typescript-eslint/explicit-member-accessibility": "error",
  "@typescript-eslint/explicit-module-boundary-types": "error",
  "@typescript-eslint/func-call-spacing": "off",
  "@typescript-eslint/indent": "off",
  "@typescript-eslint/init-declarations": "off",
  "@typescript-eslint/keyword-spacing": "off",
  "@typescript-eslint/lines-around-comment": "off",
  "@typescript-eslint/lines-between-class-members": "warn",
  "@typescript-eslint/member-delimiter-style": "off",
  "@typescript-eslint/member-ordering": "warn",
  "@typescript-eslint/method-signature-style": "off",
  "@typescript-eslint/naming-convention": "off",
  "@typescript-eslint/no-array-constructor": "error",
  "@typescript-eslint/no-base-to-string": "error",
  "@typescript-eslint/no-confusing-non-null-assertion": "error",
  "@typescript-eslint/no-confusing-void-expression": "warn",
  "@typescript-eslint/no-dupe-class-members": "error",
  "@typescript-eslint/no-duplicate-enum-values": "error",
  "@typescript-eslint/no-dynamic-delete": "warn",
  "@typescript-eslint/no-empty-function": "error",
  "@typescript-eslint/no-empty-interface": "off",
  "@typescript-eslint/no-explicit-any": "error",
  "@typescript-eslint/no-extra-non-null-assertion": "error",
  "@typescript-eslint/no-extra-parens": "off",
  "@typescript-eslint/no-extra-semi": "off",
  "@typescript-eslint/no-extraneous-class": "error",
  "@typescript-eslint/no-floating-promises": "error",
  "@typescript-eslint/no-for-in-array": "warn",
  "@typescript-eslint/no-implicit-any-catch": "off",
  "@typescript-eslint/no-implied-eval": "error",
  "@typescript-eslint/no-inferrable-types": "warn",
  "@typescript-eslint/no-invalid-this": "error",
  "@typescript-eslint/no-invalid-void-type": "error",
  "@typescript-eslint/no-loop-func": "error",
  "@typescript-eslint/no-loss-of-precision": "error",
  "@typescript-eslint/no-magic-numbers": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-misused-promises": [
    "warn",
    {
      "checksConditionals": true,
      "checksVoidReturn": true,
    },
  ],
  "@typescript-eslint/no-namespace": "warn",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
  "@typescript-eslint/no-non-null-assertion": "error",
  "@typescript-eslint/no-parameter-properties": "off",
  "@typescript-eslint/no-redeclare": "warn",
  "@typescript-eslint/no-redundant-type-constituents": "warn",
  "@typescript-eslint/no-require-imports": "error",
  "@typescript-eslint/no-this-alias": [
    "error",
    {
      "allowDestructuring": true,
    },
  ],
  "@typescript-eslint/no-throw-literal": "error",
  "@typescript-eslint/no-type-alias": "off",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
    "warn",
    {
      "allowComparingNullableBooleansToFalse": false,
      "allowComparingNullableBooleansToTrue": false,
    },
  ],
  "@typescript-eslint/no-unnecessary-condition": "off",
  "@typescript-eslint/no-unnecessary-qualifier": "error",
  "@typescript-eslint/no-unnecessary-type-arguments": "error",
  "@typescript-eslint/no-unnecessary-type-assertion": "warn",
  "@typescript-eslint/no-unnecessary-type-constraint": "warn",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/no-unsafe-assignment": "off",
  "@typescript-eslint/no-unsafe-call": "off",
  "@typescript-eslint/no-unsafe-member-access": "off",
  "@typescript-eslint/no-unsafe-return": "off",
  "@typescript-eslint/no-unused-expressions": "error",
  "@typescript-eslint/no-unused-vars": "warn",
  "@typescript-eslint/no-use-before-define": "off",
  "@typescript-eslint/no-useless-constructor": "error",
  "@typescript-eslint/no-useless-empty-export": "error",
  "@typescript-eslint/no-var-requires": "off",
  "@typescript-eslint/non-nullable-type-assertion-style": "off",
  "@typescript-eslint/parameter-properties": [
    "warn",
    {
      "prefer": "parameter-property",
    },
  ],
  "@typescript-eslint/prefer-as-const": "error",
  "@typescript-eslint/prefer-enum-initializers": "error",
  "@typescript-eslint/prefer-for-of": "warn",
  "@typescript-eslint/prefer-function-type": "off",
  "@typescript-eslint/prefer-includes": "warn",
  "@typescript-eslint/prefer-literal-enum-member": "error",
  "@typescript-eslint/prefer-namespace-keyword": "error",
  "@typescript-eslint/prefer-optional-chain": "error",
  "@typescript-eslint/prefer-readonly": "error",
  "@typescript-eslint/prefer-readonly-parameter-types": "off",
  "@typescript-eslint/prefer-reduce-type-parameter": "error",
  "@typescript-eslint/prefer-regexp-exec": "warn",
  "@typescript-eslint/prefer-string-starts-ends-with": "error",
  "@typescript-eslint/prefer-ts-expect-error": "error",
  "@typescript-eslint/promise-function-async": "off",
  "@typescript-eslint/quotes": "off",
  "@typescript-eslint/require-array-sort-compare": "warn",
  "@typescript-eslint/restrict-plus-operands": "warn",
  "@typescript-eslint/restrict-template-expressions": [
    "warn",
    {
      "allowBoolean": true,
      "allowNumber": true,
    },
  ],
  "@typescript-eslint/return-await": "error",
  "@typescript-eslint/semi": "off",
  "@typescript-eslint/sort-type-union-intersection-members": "off",
  "@typescript-eslint/space-before-blocks": "off",
  "@typescript-eslint/space-before-function-paren": "off",
  "@typescript-eslint/space-infix-ops": "off",
  "@typescript-eslint/strict-boolean-expressions": "off",
  "@typescript-eslint/switch-exhaustiveness-check": "warn",
  "@typescript-eslint/triple-slash-reference": "warn",
  "@typescript-eslint/type-annotation-spacing": "off",
  "@typescript-eslint/typedef": "off",
  "@typescript-eslint/unbound-method": "warn",
  "@typescript-eslint/unified-signatures": "warn",
}
`;

exports[`createTypeScriptRules without typescript 1`] = `null`;

exports[`createTypeScriptRules without version 1`] = `null`;

exports[`override snapshots without typescript 1`] = `null`;
